--- a/_includes/fonts.html
+++ b/_includes/fonts.html
@@ -1,6 +1,12 @@
 <script type="text/javascript">
   WebFontConfig = {
-    google: { families: [ 'Bitter:400,700,400italic:latin' ] }
+    google: {
+      families: [
+        'Source+Code+Pro:200,300,400,500,600,700,900',
+        'Alegreya+Sans:800',
+        'Alegreya:400,400i,500,500i,700,700i'
+      ]
+    }
   };
   (function(d) {
     var wf = d.createElement('script'), s = d.scripts[0];
