--- a/_sass/whiteglass/_layout.scss
+++ b/_sass/whiteglass/_layout.scss
@@ -9,10 +9,9 @@
 }
 
 .site-title {
-  font-size: 26px;
+  font-size: 34px;
   font-weight: 300;
   line-height: 56px;
-  letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
 
@@ -85,7 +84,6 @@
     margin-bottom: $spacing-unit * 2;
 
     &:not(:first-child) {
-      border-top: 4px solid $grey-color-light;
       padding-top: $spacing-unit * 2;
     }
   }
@@ -148,17 +146,20 @@
 }
 
 .post-title {
-  font-size: 42px;
-  letter-spacing: -1px;
+  font-size: 50px;
   line-height: 1;
 
   @include media-query($on-laptop) {
-    font-size: 36px;
+    font-size: 40px;
   }
 }
 
 .post-content {
   margin-bottom: $spacing-unit;
+
+  h1,h2,h3,h4 {
+    margin-top: $spacing-unit * 2;
+  }
 
   h1 {
     font-size: 38px;
@@ -200,8 +201,6 @@
  */
 .pagination {
   padding: $spacing-unit / 2 0;
-  border-top: 1px solid $grey-color-light;
-  border-bottom: 1px solid $grey-color-light;
   text-align: center;
   @extend %clearfix;
 
